# knows

./: .bumpversion.cfg  .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLUGINS.md  README.md  SCHEMA.md  pyproject.toml  requirements.txt  schema.json  setup.py  tbump.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pre-release.yml  release.yml  test.yml
knows/: __init__.py  __main__.py  builtin_formats.py  command_line_interface.py  format_plugin.py  format_registry.py  graph.py  graph_drawer.py  output_format.py  schema.json  schema.py
plugin-example/: README.md  pyproject.toml
plugin-example/knows_ndjson/: __init__.py  plugin.py
plugin-example/tests/: test_ndjson_plugin.py
schema-examples/: citation_network_schema.json  default_schema.json  ecommerce_schema.json  employee_schema.json  financial_schema.json  infrastructure_schema.json  knowledge_graph_schema.json  movie_database_schema.json  simple_friendship_schema.json  simple_message_schema.json  simple_task_schema.json  simple_webpage_schema.json  social_network_schema.json  transportation_schema.json
tests/: __init__.py  test_builtin_formats.py  test_command_line_interface.py  test_format_plugin.py  test_format_registry.py  test_graph.py  test_graph_drawer.py  test_main_output.py  test_output_format.py  test_schema.py
